<resources>
    <string name="app_name">Court Counter</string>
    <string name="tagline">Udacity Court Counter</string>
    <string name="ABND">Android Basics Nanodegree</string>
    <string name="info">Record scores of two BasketBall teams</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome!</string>
    <string name="team_names">Enter Team Names : </string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B"</string>
    <string name="play">Lets Play!</string>
    <string name="score">0</string>
    <string name="three">+3 Points</string>
    <string name="two">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="reset">RESET</string>
</resources>
