<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@drawable/custom_background" />

    <ImageView
        android:id="@+id/udacity"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/udacity" />


    <TextView
        android:id="@+id/CourtCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/udacity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/tagline"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ABND"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CourtCounter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/ABND" />

    <androidx.cardview.widget.CardView
        android:id="@+id/Banner"
        android:layout_width="340dp"
        android:layout_height="240dp"
        android:layout_below="@id/ABND"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        app:cardUseCompatPadding="true"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/basket_dribbble" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Banner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/info" />

    <Button
        android:id="@+id/get_started"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/get_started"
        android:textColor="@color/colorWhite" />

</RelativeLayout>