<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/teamA"
                android:textColor="@color/colorText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="@color/colorPureBlack"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button_2"
                android:onClick="incrementByThreeA"
                android:text="@string/three"
                android:textColor="@color/colorWhite" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button_2"
                android:onClick="incrementByTwoA"
                android:text="@string/two"
                android:textColor="@color/colorWhite" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded_button_2"
                android:onClick="incrementByOneA"
                android:text="@string/free_throw"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="400dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="360dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/teamB"
                android:textColor="@color/colorText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="@color/colorPureBlack"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button_2"
                android:onClick="incrementByThreeB"
                android:text="@string/three"
                android:textColor="@color/colorWhite" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button_2"
                android:onClick="incrementByTwoB"
                android:text="@string/two"
                android:textColor="@color/colorWhite" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded_button_2"
                android:onClick="incrementByOneB"
                android:text="@string/free_throw"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_button"
        android:onClick="reset"
        android:text="@string/reset"
        android:textColor="@color/colorWhite" />

</RelativeLayout>